--- a/index.hbs
+++ b/index.hbs
@@ -46,20 +46,22 @@
 </section>
 
 <main class="gh-main gh-outer">
-    <div class="gh-feed gh-inner">
-        {{!-- Bloc qui affiche le contenu de la page /home --}}
-        {{#get "pages" filter="slug:home" limit="1"}}
-            {{#foreach pages}}
-                <section class="home-intro">
-                    <h1 class="home-intro-title">{{title}}</h1>
-                    <div class="home-intro-content">
-                        {{content}}
-                    </div>
-                </section>
-            {{/foreach}}
-        {{/get}}
 
-        
+    {{!-- Contenu de la page /home --}}
+    {{#get "pages" filter="slug:home" limit="1"}}
+        {{#foreach pages}}
+            <article class="gh-inner gh-home-page">
+                <header class="gh-home-page-header">
+                    <h1 class="gh-home-page-title">{{title}}</h1>
+                </header>
+                <section class="gh-home-page-content">
+                    {{content}}
+                </section>
+            </article>
+        {{/foreach}}
+    {{/get}}
+
+    <div class="gh-feed gh-inner">
         {{#foreach posts}}
             {{> "loop"}}
         {{/foreach}}
