Translate "previous" &"next"

--- a/post.hbs
+++ b/post.hbs
@@ -61,7 +61,7 @@
                     <nav class="gh-navigation">
                         <div class="gh-navigation-previous">
                             {{#prev_post}}
-                                <a class="gh-navigation-link" href="{{url}}">← Previous</a>
+                                <a class="gh-navigation-link" href="{{url}}">← Article récédent</a>
                             {{/prev_post}}
                         </div>
 
@@ -69,7 +69,7 @@
 
                         <div class="gh-navigation-next">
                             {{#next_post}}
-                                <a class="gh-navigation-link" href="{{url}}">Next →</a>
+                                <a class="gh-navigation-link" href="{{url}}">Article suivant →</a>
                             {{/next_post}}
                         </div>
                     </nav>
