--- a/post.hbs
+++ b/post.hbs
@@ -61,7 +61,7 @@
                     <nav class="gh-navigation">
                         <div class="gh-navigation-previous">
                             {{#prev_post}}
-                                <a class="gh-navigation-link" href="{{url}}">← Article récédent</a>
+                                <a class="gh-navigation-link" href="{{url}}">← Article précédent</a>
                             {{/prev_post}}
                         </div>
 
