--- a/actualites.hbs
+++ b/actualites.hbs
@@ -47,6 +47,19 @@
 
 <main class="gh-main gh-outer">
 
+    {{!-- Contenu de la page /actualites --}}
+    {{#get "pages" filter="slug:actualites" limit="1"}}
+        {{#foreach pages}}
+            <article class="gh-article">
+                <header class="gh-article-header gh-canvas">
+                    <h1 class="gh-article-title">{{title}}</h1>
+                </header>
+                <section class="gh-content gh-canvas">
+                    {{content}}
+                </section>
+            </article>
+        {{/foreach}}
+    {{/get}}
 
     <div class="gh-feed gh-inner">
         {{#foreach posts}}
