--- a/actualites.hbs
+++ b/actualites.hbs
@@ -52,7 +52,7 @@
         {{#foreach pages}}
             <article class="gh-article">
                 <header class="gh-article-header gh-canvas">
-                    <h1 class="gh-article-title">{{title}}</h1>
+                    <h1 class="gh-actualites-page-title">{{title}}</h1>
                 </header>
                 <section class="gh-content gh-canvas">
                     {{content}}
