--- a/actualites.hbs
+++ b/actualites.hbs
@@ -60,12 +60,15 @@
             </article>
         {{/foreach}}
     {{/get}}
-
-    <div class="gh-feed gh-inner">
-        {{#foreach posts}}
-            {{> "loop"}}
-        {{/foreach}}
-    </div>
+    
+    {{!-- Liste des articles --}}
+    {{#get "posts" limit="all" order="published_at desc"}}
+        <div class="gh-feed gh-inner">
+            {{#foreach posts}}
+                {{> "loop"}}
+            {{/foreach}}
+        </div>
+    {{/get}}
 </main>
 
 {{#contentFor "body_class"}}{{#match @custom.header_section_layout "Side by side"}} has-side-about{{/match}}{{#match @custom.header_section_layout "Large background"}}{{#if @site.cover_image}} is-head-transparent has-background-about{{else}} has-side-about{{/if}}{{/match}}{{#match @custom.header_section_layout "Typographic profile"}}{{#if @site.icon}} has-typographic-about{{else}} has-side-about{{/if}}{{/match}}{{/contentFor}}
