--- a/index.hbs
+++ b/index.hbs
@@ -50,11 +50,11 @@
     {{!-- Contenu de la page /home --}}
     {{#get "pages" filter="slug:home" limit="1"}}
         {{#foreach pages}}
-            <article class="gh-inner gh-home-page">
-                <header class="gh-home-page-header">
-                    <h1 class="gh-home-page-title">{{title}}</h1>
+            <article class="gh-article">
+                <header class="gh-article-header gh-canvas">
+                    <h1 class="home">{{title}}</h1>
                 </header>
-                <section class="gh-home-page-content">
+                <section class="gh-content gh-canvas">
                     {{content}}
                 </section>
             </article>
