--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: Manrope;
     font-weight: 100 1000;
+    font-display: optional;
     src: url("../fonts/Manrope[wght].woff2") format("woff2-variations");
 }
 
