--- a/index.hbs
+++ b/index.hbs
@@ -4,11 +4,11 @@
     <div class="gh-about-inner gh-inner">
         {{#match @custom.header_section_layout "!=" "Typographic profile"}}
             {{#if @site.cover_image}}
-                <img fetchpriority=high class="gh-about-image" src="{{@site.cover_image}}" alt="{{@site.title}}">
+                <img fetchpriority=high class="gh-about-image" src="{{@site.cover_image}}" alt="Image de fond d'arrière plan de {{@site.title}}">
             {{/if}}
         {{else}}
             {{#if @site.icon}}
-                <img fetchpriority=high class="gh-about-image" src="{{@site.icon}}" alt="{{@site.title}}">
+                <img fetchpriority=high class="gh-about-image" src="{{@site.icon}}" alt="Logo de {{@site.title}}">
             {{/if}}
         {{/match}}
         <script>
