--- a/partials/feature-image.hbs
+++ b/partials/feature-image.hbs
@@ -1,6 +1,6 @@
 {{#if feature_image}}
     <figure class="gh-article-image{{#if feature_image_caption}} has-caption{{/if}}">
-        <img
+        <img 
             srcset="{{img_url feature_image size="s"}} 300w,
                     {{img_url feature_image size="m"}} 720w,
                     {{img_url feature_image size="l"}} 960w,
@@ -10,6 +10,7 @@
             sizes="(max-width: 1200px) 100vw, 1200px"
             src="{{img_url feature_image size="xl"}}"
             alt="{{title}}"
+            fetchpriority=high
         >
         {{#if feature_image_caption}}
             <figcaption>{{feature_image_caption}}</figcaption>
