--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,6 +1,8 @@
 @import "@tryghost/shared-theme-assets/assets/css/v1/screen.css";
 @import "fonts.css";
 
+
+
 :root {
     --font-sans: Manrope, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
     --font-serif: Libre Baskerville, Georgia, Times, serif;
@@ -952,4 +954,10 @@ hr {
 
 .gh-copyright {
     font-size: 1.4rem;
+}
+
+/* Donne une taille explicite à tous les <h1> */
+:where(h1) {
+    font-size: 2.2rem;      /* adapte la valeur à ton design */
+    margin-block: 0.67em;   /* marge "classique" d’un h1 */
 }
